@@ -1,6 +1,11 @@
 Changes from jTDS 0.9
 =========================
 
+11/15/2004 - Alin Sinpalean
+ o Applied Mike's fix for bug [1062549] Build fails under java 1.3.
+ o Corrected bug [1062198] SecurityException not caught in class
+   ConnectionJDBC2 (fix by Andreas Mross - amross).
+
 11/10/2004 - David Kilzer
  o Fixed case of 'props.tcpnodelay' in JtdsDataSource.getConnection() (two
    unit tests were failing).
